--- a/Vidoe 2/index.html
+++ b/Vidoe 2/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Sigma Website video 1</title>
+    <title>Sigma website video 2</title>
 </head>
 <body>
-
-    <h2>Hello man</h2>
-
-    <script src="main.js"></script>
+    
+    Hi my name is Tasbir.
+    
+    <script src="script.js"></script>
 </body>
 </html>
