--- a/Video 29/creating_card.html
+++ b/Video 29/creating_card.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="x-icon"
+        href="https://onedrive.live.com/embed?resid=4467A1E49CBE7C7A%211238&authkey=%21AJIJBWfYhfEV7pQ&width=128&height=128">
     <link rel="stylesheet" href="style.css">
     <title>Creating Card | HTML</title>
     <style>
@@ -11,6 +13,10 @@
         body {
             background-color: #eaeff1;
             font-family: "Raleway", sans-serif;
+        }
+
+        .hello {
+            display: flex;
         }
 
         img {
@@ -23,7 +29,7 @@
         #container {
 
             max-width: 300px;
-            margin: 0 auto;
+            margin: -185px auto;
             margin-top: 20vh;
         }
 
@@ -81,28 +87,77 @@
             transition: background-color 0.2s;
 
         }
+
     </style>
 </head>
 
 <body>
-    <div id="container">
-        <div class="card">
-            <img src="https://onedrive.live.com/embed?resid=4467A1E49CBE7C7A%211233&authkey=%21AJWKB5_mmNEX5hY&width=696&height=464"
-                alt="Lago di Braies">
-            <div class="card__details">
-                <span class="tag">Nature</span>
-                <span class="tag">Lake</span>
-                <div class="name">Lago di Braies</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur sodales morbi dignissim sed diam
-                    pharetra
-                    vitae ipsum odio.</p>
-                <a href="https://www.patreon.com/MrTx">
-                    <button>
-                        Read more
-                    </button>
-                </a>
+    <div class="hello">
+
+
+        <div id="container">
+            <div class="card">
+                <img src="https://onedrive.live.com/embed?resid=4467A1E49CBE7C7A%211233&authkey=%21AJWKB5_mmNEX5hY&width=696&height=464"
+                    alt="Lago di Braies">
+                <div class="card__details">
+                    <span class="tag">Nature</span>
+                    <span class="tag">Lake</span>
+                    <div class="name">Lago di Braies</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur sodales morbi dignissim sed
+                        diam
+                        pharetra
+                        vitae ipsum odio.</p>
+                    <a href="https://www.patreon.com/MrTx">
+                        <button>
+                            Read more
+                        </button>
+                    </a>
+                </div>
             </div>
         </div>
+
+        <div id="container">
+            <div class="card">
+                <img src="https://onedrive.live.com/embed?resid=4467A1E49CBE7C7A%211233&authkey=%21AJWKB5_mmNEX5hY&width=696&height=464"
+                    alt="Lago di Braies">
+                <div class="card__details">
+                    <span class="tag">Nature</span>
+                    <span class="tag">Lake</span>
+                    <div class="name">Lago di Braies</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur sodales morbi dignissim sed
+                        diam
+                        pharetra
+                        vitae ipsum odio.</p>
+                    <a href="https://www.patreon.com/MrTx">
+                        <button>
+                            Read more
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div id="container">
+            <div class="card">
+                <img src="https://onedrive.live.com/embed?resid=4467A1E49CBE7C7A%211233&authkey=%21AJWKB5_mmNEX5hY&width=696&height=464"
+                    alt="Lago di Braies">
+                <div class="card__details">
+                    <span class="tag">Nature</span>
+                    <span class="tag">Lake</span>
+                    <div class="name">Lago di Braies</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur sodales morbi dignissim sed
+                        diam
+                        pharetra
+                        vitae ipsum odio.</p>
+                    <a href="https://www.patreon.com/MrTx">
+                        <button>
+                            Read more
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 
